--- a/style.css
+++ b/style.css
@@ -1,1 +1,52 @@
+body {
+  margin: 20px;
+}
 
+.about-section {
+  display: flex;
+  align-items: flex-start;
+}
+
+.about-image {
+  width: 240px;
+  height: auto;
+}
+
+.about-text {
+  flex: 1;
+  max-width: 640px;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+th {
+  text-align: left;
+  font-weight: normal;
+  border-bottom: 1.5px solid #555;
+}
+
+tr:nth-child(even) {
+  background: #f7f7f7;
+}
+
+th, td {
+  padding: 0.5em 0.5em;
+}
+
+td ul {
+  margin: 0;
+  padding: 0;
+}
+
+@media (max-width: 600px) {
+  .about-section {
+    flex-direction: column;
+    align-items: center;
+  }
+  .about-image {
+    width: 100%;
+    max-width: 300px;
+  }
+}
