--- a/style.css
+++ b/style.css
@@ -87,6 +87,9 @@ th {
 tr:nth-child(even) {
   background: #f9fbfc;
 }
+td ul {
+  padding-top: 0px;
+}
 
 @media (max-width: 700px) {
   .about-section {
