--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ tr:nth-child(even) {
   background: #f9fbfc;
 }
 td ul {
-  padding-top: 0px;
+  margin-top: 0px;
 }
 
 @media (max-width: 700px) {
