--- a/style.css
+++ b/style.css
@@ -88,8 +88,8 @@ tr:nth-child(even) {
   background: #f9fbfc;
 }
 td ul {
-  margin: 0px;
-  padding-left: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 @media (max-width: 700px) {
